# purecoding

./: .gitignore  Bag_of_Words_Meets_Bags_of_Popcorn-NaiveBayes.ipynb  CODE_OF_CONDUCT.md  README.md  lessons
android/: .gitignore
android/BitcoinTicker/: .project  settings.gradle
android/Clima-Android-master/: .project  build.gradle
android/Dicee/: .project  Android.mk
android/MobileLauncher/: settings.gradle
android/MyDicee/: settings.gradle
android/TestMQTTClient/: settings.gradle
android/TestProtobuf/: settings.gradle
android/TestProtobufClient/: settings.gradle
android/bitcoin-ticker-android-lukechendev/: .project  local.properties
cpp-journey/: .cproject  .project  CMakeLists.txt  journey1.cpp  journey2.cpp  journey3.cpp  journey4.cpp  journey5.cpp  merge-sort.cpp  valid-palindrome.cpp
cpp-journey/.metadata/: version.ini
cpp-journey/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
cpp-journey/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
cpp-journey/.metadata/.plugins/org.eclipse.linuxtools.cdt.libhover/C/: devhelp.libhover
cpp-journey/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
cpp-journey/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
sandbox/: Test1.java
workspace_ai/training_beginner/: Luke_Kannada_Mnist-1500.ipynb  Luke_Kannada_Mnist.ipynb  Luke_Kannada_Mnist_Tensor.ipynb
workspace_aws/test_cdk1/: cdk.json  package-lock.json  package.json
workspace_aws/test_cdk2/: cdk.json  package-lock.json  package.json
workspace_c#/a01_helloworld/: HelloWorld.cs  a01_helloworld.csproj
workspace_c#/aspnetapp/: Startup.cs
workspace_c++/: .gitignore  README.md
workspace_c++/automotive/: .gitignore  CMakeLists.txt  NOTICE  README.md  rebuild.sh
workspace_c++/automotive/include/: Car.h  car.h  carmanagerbase.h  carpropertyids.h  carpropertymanager.h  carpropertyvalue.h  carservice.h
workspace_c++/automotive/src/: car.cpp  carmanagerbase.cpp  carpropertyids.cpp  carpropertymanager.cpp  carpropertyvalue.cpp  carservice.cpp  main.cpp
workspace_c++/build-sorting-Desktop_Qt_5_12_3_GCC_64bit-Debug/: Makefile  sorting
workspace_c++/concurrency/: CMakeLists.txt  asyncLazy.cpp  asyncLazy2.cpp  asyncVersusThread.cpp  atomicCondition.cpp  conditionVariable.cpp  conditionVariable2.cpp  dotProductAsync.cpp  fireAndForgetFutures.cpp  mutex.cpp  packagedTask.cpp  promiseFuture.cpp  promiseFutureException.cpp  promiseFutureSynchronise.cpp  sandbox.cpp  sharedFuture.cpp  spinLock.cpp
workspace_c++/eductive_c++/: addMoney.cpp
workspace_c++/sorting/: main.cpp
workspace_c++/sorting2/: main.cpp
workspace_c++/sorting3/: main.cpp
workspace_c++/sorting4/: main_merge.cpp  main_quick.cpp
workspace_c++/sorting5_merge/: main.cpp
workspace_c++/sorting6_merge/: \  main.cpp  main_io.cpp  output
workspace_c++/sorting7/: data  main.cpp
workspace_c++/sorting8/: data2  main.cpp
workspace_c++/sorting9/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data1  main.cpp  sorting  sorting.cpp  sorting.h  util.cpp  util.h
workspace_c++/test1/: main.cpp
workspace_c++/test10/: main.cpp
workspace_c++/test11/: .data2.swp  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
workspace_c++/test12/: main.cpp
workspace_c++/test13/: data  data1  main.cpp  main2.cpp  main3.cpp  main4_resolved.cpp
workspace_c++/test14/: main.cpp
workspace_c++/test15/: main.cpp
workspace_c++/test16/: Graph.java
workspace_c++/test2/: main.cpp
workspace_c++/test3/: main.cpp
workspace_c++/test4/: .main.cpp.swp  main.cpp
workspace_c++/test5/: test5.cpp
workspace_c++/test6/: main.cpp
workspace_c++/test7/: main.cpp
workspace_c++/test8/: main.cpp  main_work_but_slow.cpp
workspace_c++/test9_io/: main.cpp  output
workspace_codesignal/countSawSubarrays/: .cproject  .project  CMakeLists.txt  countSawSubarrays.cpp
workspace_daily/problem1/: data1  data2  main1.cpp  main2_solved.cpp
workspace_daily/problem2/: a1  a2  a3  data3  data4  data5  main1.cpp  main2.cpp  main3_solved.cpp  t  temp  test.cpp
workspace_educative/template/: Solution.java
workspace_hackerrank/amazon_20190822/test2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test2
workspace_hackerrank/test1/: Makefile  (+6 more)
workspace_java2/: BinaryTreeInorderTraversal.java  BinaryTreeMaximumPathSum.java  BinaryTreePaths.java  MergeSort.java  QuickSort.java  README.md
workspace_standard/: .gitignore
(+280 files in other folders)
