cmake_minimum_required (VERSION 2.6)

project (cpp-journey)

add_executable(cpp-journey cpp-journey.cpp)
add_executable(journey1 journey1.cpp)
add_executable(journey2 journey2.cpp)
add_executable(journey3 journey3.cpp)
add_executable(journey4 journey4.cpp)
add_executable(journey5 journey5.cpp)
add_executable(valid-palindrome valid-palindrome.cpp)
